--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #29353f;
+  color: #FFF5EE;
+  /* color: #F0FFFF; */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.tilt-in-fwd-tl {
+  -webkit-animation:tilt-in-fwd-tl .9s 
+  cubic-bezier(.25,.46,.45,.94) both;animation:tilt-in-fwd-tl .9s 
+  cubic-bezier(.25,.46,.45,.94) both
 }
