--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,41 @@ body {
   /* color: #F0FFFF; */
 }
 
+.light-up {
+  backdrop-filter: blur(1px);
+}
+
+.light-up:hover {
+  backdrop-filter: blur(10px) brightness(120%);
+}
+
+.inner-shadow {
+  box-shadow: inset 0 1px 0 #4e5558,0 1px 3px #1a1a1a;
+}
+
+.inner-shadow:hover {
+  box-shadow: inset 0 1px 0 #4e5558,0 1px 3px #1a1a1a;
+}
+
 .tilt-in-fwd-tl {
   -webkit-animation:tilt-in-fwd-tl .9s 
   cubic-bezier(.25,.46,.45,.94) both;animation:tilt-in-fwd-tl .9s 
   cubic-bezier(.25,.46,.45,.94) both
+}
+
+.slide-in-blurred-top{-webkit-animation:slide-in-blurred-top 1.1s cubic-bezier(.23,1.000,.32,1.000) both;animation: slide-in-blurred-top 1.1s cubic-bezier(.23,1.000,.32,1.000) both}
+
+.neumorphic {
+  text-shadow: 1px 1px 1px #909BA0,
+               1px 2px 1px #909BA0,
+               1px 3px 1px #909BA0,
+               1px 4px 1px #909BA0,
+               1px 5px 1px #909BA0,
+               1px 6px 1px #909BA0,
+               1px 7px 1px #909BA0,
+               1px 8px 1px #909BA0;
+               letter-spacing: 2px;
+               /* 1px 9px 1px #909BA0; */
+               /* 1px 10px 1px #909BA0; */
+  /* text-shadow: 3px 3px 8px rgba(255, 255, 255, 0.7), -3px -3px 8px rgba(0, 0, 0, 0.2); */
 }
