--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 body {
   background: #29353f;
   color: #FFF5EE;
+  height: 100vh;
   /* color: #F0FFFF; */
 }
 
@@ -28,6 +29,10 @@ body {
   -webkit-animation:tilt-in-fwd-tl .9s 
   cubic-bezier(.25,.46,.45,.94) both;animation:tilt-in-fwd-tl .9s 
   cubic-bezier(.25,.46,.45,.94) both
+}
+.text-stroke-tr {
+  -webkit-text-stroke: 2px rgb(237, 216, 238, .02); /* Red stroke with 50% opacity */
+  color: transparent;
 }
 
 .slide-in-blurred-top{-webkit-animation:slide-in-blurred-top 1.1s cubic-bezier(.23,1.000,.32,1.000) both;animation: slide-in-blurred-top 1.1s cubic-bezier(.23,1.000,.32,1.000) both}
