--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,54 @@ body {
   backdrop-filter: blur(10px) brightness(120%);
 }
 
+.social-icon-overlay,
+.social-icon-two-overlay {
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background: rgb(186, 103, 200, .2);
+  backdrop-filter: blur(1px) brightness(120%);
+  filter: opacity(40%);
+}
+
+.social-icon-overlay:hover,
+.social-icon-two-overlay:hover {
+  backdrop-filter: brightness(150%);
+}
+
+.social-icon-overlay::before,
+.social-icon-two-overlay::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  transition: all .7s .1s;
+}
+
+.social-icon-overlay::before {
+  width: 0;
+  background: #9354A2;
+}
+
+.social-icon-two-overlay::after {
+  height: 0;
+  /* background:  rgb(186, 103, 200, .2); */
+}
+
+.social-icon-container {
+  /* box-shadow: inset 3px 3px 4px #ccc; */
+  overflow: hidden;
+}
+
+.social-icon-container:hover .social-icon-overlay::before {
+  width: 100%;
+}
+
+.social-icon-container:hover .social-icon-two-overlay::after {
+  height: 100%;
+  background: #9354A2;
+  backdrop-filter: blur(3px);
+}
+
 .inner-shadow {
   box-shadow: inset 0 1px 0 #4e5558,0 1px 3px #1a1a1a;
 }
