--- a/app/globals.css
+++ b/app/globals.css
@@ -102,6 +102,10 @@ body {
   filter: brightness(120%);
 }
 
+.project-container:hover .project-logo {
+  width: 20%;
+}
+
 .text-stroke-tr {
   -webkit-text-stroke: 2px rgb(237, 216, 238, .04);
   color: transparent;
