--- a/app/globals.css
+++ b/app/globals.css
@@ -106,6 +106,10 @@ body {
   width: 20%;
 }
 
+.project-logo {
+  background: #775087;
+}
+
 .text-stroke-tr {
   -webkit-text-stroke: 2px rgb(237, 216, 238, .04);
   color: transparent;
@@ -127,4 +131,62 @@ body {
                /* 1px 9px 1px #909BA0; */
                /* 1px 10px 1px #909BA0; */
   /* text-shadow: 3px 3px 8px rgba(255, 255, 255, 0.7), -3px -3px 8px rgba(0, 0, 0, 0.2); */
+}
+
+/* styles/globals.css or styles/modal.css */
+
+.modal {
+  position: relative;
+  background: red;
+  display: contents;
+  width: 80%;
+  max-width: 500px;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.75);
+  /* background: blue; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .phone-container { 
+  position: relative;
+  width: 80%;
+  height: 90%;
+} */
+
+/* .carousel-container {
+  position: absolute;
+  bottom: 10px;
+  width: 70%; 
+  height: 80%;
+  z-index: 2;
+} */
+
+/* .carousel-container {
+  position: absolute;
+  top: 10%; 
+  left: 15%; 
+  width: 70%;
+  height: 80%; 
+  z-index: 2;
+} */
+
+.slick-slide img {
+  width: 100%;
+  height: auto;
 }
