--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,6 @@ body {
   position: relative;
   display: flex;
   user-select: none;
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* overflow: hidden; */
-  /* color: #F0FFFF; */
 }
 .glassy {
   background: rgb(41, 53, 63, .3);
@@ -129,7 +125,7 @@ body {
   -webkit-text-stroke: 2px rgb(237, 216, 238, .04);
   color: transparent;
 }
-.my-stacks {
+.stroked-text {
   -webkit-text-stroke: 1px #FFF5EE;
   color: transparent;
 }
